--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
     "dev": "nodemon server.js",
-    "db:init": "npx knex migrate:latest && npx knex seed:run"
+    "db:migrate": "npx knex migrate:latest",
+    "db:seed": "npx knex seed:run"
   },
   "keywords": [],
   "author": "",
