--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "pg": "^8.16.3",
+    "resend": "^6.1.2",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
