major upgrade, i cant list all of them

--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,8 @@
     "knex": "^3.1.0",
     "pg": "^8.16.3",
     "resend": "^6.1.2",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "stripe": "^19.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
